--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,12 +4,10 @@
     </IfModule>
 
     RewriteEngine On
-    # Redirect all requests to the Laravel application
+	RewriteCond %{HTTP:Authorization} ^(.*) 
+	RewriteRule .* - [e=HTTP_AUTHORIZATION:%1]
+    # Redirect to public/index.php
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^ index.php [L]
-
-    # Additional rules from the other commit
-    RewriteRule ^$ public/ [L]
-    RewriteRule (.*) public/$1 [L]
 </IfModule>
