--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "vue-chart-3": "^3.1.8",
         "vue-router": "^4.5.0",
         "vue-sweetalert2": "^5.0.11",
+        "vue-tel-input": "^9.3.0",
         "vue3-toastify": "^0.2.5",
         "vuex": "^4.1.0"
     }
